--- a/app/client/widgets/list/list.html
+++ b/app/client/widgets/list/list.html
@@ -2,7 +2,7 @@
   <table class="table table-hover">
     <thead>
       <tr>
-        {{#each schema}}
+        {{#each getSchema}}
           <th>{{label}}</th>
         {{/each}}
         <th></th>
@@ -11,7 +11,7 @@
     <tbody>
     {{#each items}}
       <tr>
-        {{#each ../schema}}
+        {{#each getSchema}}
           <td>{{cell .. this}}</td>
         {{/each}}
         <td>
