diary date display fix

--- a/app/client/widgets/announcement/announcement.html
+++ b/app/client/widgets/announcement/announcement.html
@@ -1,4 +1,6 @@
 <template name="announcement">
-	<h3>{{header}}</h3>
-	<div>{{{body}}}</div>
+	<div class="announcement">
+		<h3>{{header}}</h3>
+		<div>{{{body}}}</div>
+	</div>
 </template>
