--- a/app/client/widgets/diary/diaryList.html
+++ b/app/client/widgets/diary/diaryList.html
@@ -1,5 +1,22 @@
 <template name="diaryList">
-  {{#each diaries}}
-    {{#linkTo route="viewDiary"}} {{date}} {{/linkTo}}
-  {{/each}}
+  <div class="box">
+    <div class="box-body table-responsive no-padding">
+      <table class="table table-hover">
+        <thead>
+          <tr>
+            <th>Date</th>
+          </tr>
+        </thead>
+        <tbody>
+        {{#each diaries}}
+          <tr>
+            <td>
+            {{#linkTo route="viewDiary"}} {{date}} {{/linkTo}}
+            </td>
+          </tr>
+        {{/each}}
+        </tbody>
+      </table>
+    </div>
+  </div>
 </template>
