--- a/app/client/widgets/announcement/announcement.html
+++ b/app/client/widgets/announcement/announcement.html
@@ -1,6 +1,13 @@
 <template name="announcement">
-	<div class="announcement">
-		<h3>{{header}}</h3>
-		<div>{{{body}}}</div>
+	<div class="box box-solid box-info">
+		<div class="box-header with-border">
+			<h3 class="box-title">{{header}}</h3>
+			<!--div class="box-tools pull-right">
+        <button type="button" class="btn btn-box-tool" data-widget="collapse">
+					<i class="fa fa-minus"></i>
+        </button>
+      </div-->
+		</div>
+		<div class="box-body">{{{body}}}</div>
 	</div>
 </template>
