--- a/app/client/widgets/diary/diary.html
+++ b/app/client/widgets/diary/diary.html
@@ -1,3 +1,5 @@
 <template name="diary">
-  <div class="diary">{{diary}}</div>
+  <div class="box">
+    <div class="diary">{{diary}}</div>
+  </div>
 </template>
