--- a/app/client/widgets/player/player.html
+++ b/app/client/widgets/player/player.html
@@ -1,9 +1,10 @@
 <template name="playlistplayer">
   <video class="video-js vjs-default-skin" controls data-setup="" width="440" height="180"></video>
-  <ul>
+  <ul class="playlist">
   {{#each (medialist)}}
-    <li>
-      {{src}}
+    <li data-id="{{@index}}" class="playlistItem {{isActive (@index)}}">
+      {{title}}
+      <span class="remove">remove</span>
     </li>
   {{/each}}
   </ul>
