--- a/app/lib/fields/fileUpload/fileUpload.html
+++ b/app/lib/fields/fileUpload/fileUpload.html
@@ -1,16 +1,16 @@
 <template name="afFileUpload">
-  Upload files: <input type="file" name="{{name}}" class="fileInput" multiple/>
-  <table>
+  <input type="file" name="{{name}}" style="visibility:hidden;position:absolute;top:0;left:0" class="fileInput" multiple/>
+  <input type=button value="Upload files" class="btn btn-primary" onclick="$(this).prev().click()">
+  <table class="table table-hover">
     <tr>
       <th>Title</th>
       <th></th>
     </tr>
   {{#each audio}}
   <tr>
-    <td>Audio</td>
-    <td>{{#if metadata.converted}}
-      Converted
-    {{/if}}</td>
+    <td>{{title}}</td>
+    <td><a href="{{this.url download=true}}">download</a></td>
+    {{#if metadata.converted}}<td class="playTrack">play</td>{{/if}}
   </tr>
   {{/each}}
 </table>
