--- a/app/lib/fields/fileUpload/fileUpload.html
+++ b/app/lib/fields/fileUpload/fileUpload.html
@@ -8,7 +8,7 @@
   </div>
 </template>
 
-<template name="afFileUploadImage">
+<template name="afFileUploadAudio">
   <table class="table table-hover">
     <tr>
       <th>Title</th>
