--- a/app/lib/fields/approveInput/approveForm.html
+++ b/app/lib/fields/approveInput/approveForm.html
@@ -1,3 +1,5 @@
 <template name="approveForm">
-  <span class="approval">Attempting to approve... {{approve}} </span>
+  {{#if Template.subscriptionsReady}}
+    <span class="approval">Attempting to approve...</span>
+  {{/if}}
 </template>
