--- a/app/lib/fields/approveInput/approveInput.html
+++ b/app/lib/fields/approveInput/approveInput.html
@@ -1,7 +1,7 @@
 <template name="afApproveInput">
   {{#if canAdmin}}
-  {{#linkTo route="approveForm" form=getForm _id=getId field=getName setting=true}}Approve{{/linkTo}}
-  {{#linkTo route="approveForm" form=getForm _id=getId field=getName setting=false}}Reject{{/linkTo}}
+  {{#linkTo route="approveForm" doc=getId field=getField setting=true}}Approve{{/linkTo}}
+  {{#linkTo route="approveForm" doc=getId field=getField setting=false}}Reject{{/linkTo}}
   {{/if}}
   <div>
   {{#if approvalsCount}}
