--- a/app/lib/fields/approveInput/approveForm.html
+++ b/app/lib/fields/approveInput/approveForm.html
@@ -1,5 +1,9 @@
 <template name="approveForm">
-  {{#if Template.subscriptionsReady}}
-    <span class="approval">Attempting to approve...</span>
+  {{#if currentUser}}
+    {{#if Template.subscriptionsReady}}
+      <span class="approval">Attempting to approve...</span>
+    {{/if}}
+  {{else}}
+    Please log in.
   {{/if}}
 </template>
