--- a/app/client/widgets/userCode/userCode.html
+++ b/app/client/widgets/userCode/userCode.html
@@ -1,4 +1,4 @@
 <template name="userCode">
-	<h1>Thank you for registering, your code is: {{code}}</h1>
-	<h2>Please bring it to the event.</h2>
+	<h1>Thank you for registering your ticket. code is: {{code}}</h1>
+	<h2>Please bring your code to the event.</h2>
 </template>
