--- a/app/client/widgets/countdown/countdown.html
+++ b/app/client/widgets/countdown/countdown.html
@@ -1,3 +1,8 @@
 <template name="countdown">
-  <div class="countdown"></div>
+  <div class="main-example">
+    <p>
+    Next year begins in:
+    </p>
+    <div class="countdown-container countdown" id="main-example"></div>
+  </div>
 </template>
