--- a/app/client/widgets/countdown/countdown.html
+++ b/app/client/widgets/countdown/countdown.html
@@ -1,8 +1,3 @@
 <template name="countdown">
-  <div class="main-example">
-    <p>
-    Next year begins in:
-    </p>
-    <div class="countdown-container countdown" id="main-example"></div>
-  </div>
+  <div class="clock" style="margin:2em;"></div>
 </template>
