--- a/app/packages/pages/client/widgets/embed/embed.html
+++ b/app/packages/pages/client/widgets/embed/embed.html
@@ -10,6 +10,6 @@
 		<iframe style="padding: 0;
     border: none;
     width:100%;
-    height:100%;" data-bind="src: link"></iframe>
+    height:100%;" src="{{link}}"></iframe>
 	</div>
 </template>
