--- a/app/packages/messaging/client/chat/navbar.html
+++ b/app/packages/messaging/client/chat/navbar.html
@@ -34,10 +34,11 @@
     <div class="pull-left">
       <!-- User Image -->
       {{#with FS.GetFile "files" (userImage createdBy)}}<img src="{{url}}" class="img-circle" alt="User Image">{{/with}}
+
     </div>
     <!-- Message title and timestamp -->
     <h4>
-      {{subject}}
+      {{userName createdBy}}
       <small style="position: relative;margin-left: 128px;"><i class="fa fa-clock-o"></i>{{fromNow createdAt}}</small>
     </h4>
     <!-- The message -->
