--- a/app/packages/calendar/submissionsCalendar.html
+++ b/app/packages/calendar/submissionsCalendar.html
@@ -29,30 +29,7 @@
   </ul>
     </div>
     <div class="box-body table-responsive no-padding">
-      <table class="table table-hover">
-        <thead>
-          <tr>
-            {{#each getSchema}}
-            <th>{{label .. this}}</th>
-            {{/each}}
-            <th></th>
-          </tr>
-        </thead>
-        <tbody>
-          {{#each items}}
-          <tr>
-            {{#each getSchema}}
-            <td>{{{cell .. this}}}</td>
-            {{/each}}
-            <td>
-              {{#linkTo route="updateForm" form=../_id }}
-              <button class="btn btn-info" style="float:right" type="button">Open</button>
-              {{/linkTo}}
-            </td>
-          </tr>
-          {{/each}}
-        </tbody>
-      </table>
+      {{> fullcalendar options}}
     </div>
   </div>
 </template>
