calendar view alpha

--- a/app/packages/calendar/submissionsCalendar.html
+++ b/app/packages/calendar/submissionsCalendar.html
@@ -29,7 +29,9 @@
   </ul>
     </div>
     <div class="box-body table-responsive no-padding">
-      {{> fullcalendar options}}
+      {{> fullcalendar
+        events=events
+      }}
     </div>
   </div>
 </template>
