--- a/app/packages/diary/client/widgets/diary/diaryList.html
+++ b/app/packages/diary/client/widgets/diary/diaryList.html
@@ -1,22 +1,12 @@
 <template name="diaryList">
   <div class="box">
     <div class="box-body table-responsive no-padding">
-      <table class="table table-hover">
-        <thead>
-          <tr>
-            <th>Date</th>
-          </tr>
-        </thead>
-        <tbody>
-        {{#each diaries}}
-          <tr>
-            <td>
-            {{#linkTo route="viewDiary"}} {{date}} {{/linkTo}}
-            </td>
-          </tr>
-        {{/each}}
-        </tbody>
-      </table>
+      {{> reactiveTable collection=col fields=fields}}
     </div>
   </div>
+</template>
+<template name="DiaryListCellButtons">
+  {{#linkTo route='viewDiary' form=this._id}}
+    <button class="btn btn-info" type="button">Edit</button>
+  {{/linkTo}}
 </template>
