--- a/app/packages/calendar/submissionsCalendar.html
+++ b/app/packages/calendar/submissionsCalendar.html
@@ -1,10 +1,21 @@
 <template name="submissionsCalendar">
   <div class="box">
     <div class="box-header with-border">
-      <h3 class="box-title">{{title}}</h3>
+      <h3 class="box-title">Calendar - {{title}}</h3>
 
-    <ul class="box-header-list">
-      <li>
+      <ul class="box-header-list" style="float:right">
+        <li>
+          {{#if canAdmin}}
+          {{#linkTo route="submissionsAdmin" form=currentForm}}<button class="btn btn-danger" style="margin-top: -27px;" type="button">Admin</button>{{/linkTo}}
+          {{/if}}
+        </li>
+        <li>
+          {{#linkTo route="submitForm" form=currentForm}}<button class="btn btn-info" style="margin-top: -27px;" type="button">New submission</button>{{/linkTo}}
+        </li>
+        <li>
+          {{> breadcrumb}}
+        </li>
+      </ul>
       <form action="#" method="get" class="form" style="width:200px">
         <div class="input-group">
           <input type="text" name="q" class="form-control form-search" placeholder="Search..." value="{{searchQuery}}">
@@ -13,20 +24,6 @@
           </span>
         </div>
       </form>
-    </li>
-    <li>
-      {{#if canAdmin}}
-      {{#linkTo route="submissionsAdmin" form=currentForm}}<button class="btn btn-danger" style="margin-top: -27px;" type="button">Admin</button>{{/linkTo}}
-      {{/if}}
-    </li>
-  <li>
-      {{#linkTo route="submitForm" form=currentForm}}<button class="btn btn-info" style="margin-top: -27px;" type="button">New submission</button>{{/linkTo}}
-    </li>
-    <li>
-
-      {{> breadcrumb}}
-    </li>
-  </ul>
     </div>
     <div class="box-body table-responsive no-padding">
       {{> fullcalendar
