Padding fixes for any views

--- a/app/packages/calendar/submissionsCalendar.html
+++ b/app/packages/calendar/submissionsCalendar.html
@@ -25,7 +25,7 @@
         </div>
       </form>
     </div>
-    <div class="box-body table-responsive no-padding">
+    <div class="box-body table-responsivesubmissionsAdminCalendar">
       {{> fullcalendar
         events=events
       }}
