--- a/app/packages/calendar/submissionsAdminCalendar.html
+++ b/app/packages/calendar/submissionsAdminCalendar.html
@@ -33,7 +33,7 @@
     </li>
   </ul>
     </div>
-    <div class="box-body table-responsive no-padding">
+    <div class="box-body table-responsivesubmissionsAdminCalendar">
       {{> fullcalendar
         events=events
       }}
