fix for diary list subscription

--- a/app/packages/files/shared/fields/fileUpload/fileUpload.html
+++ b/app/packages/files/shared/fields/fileUpload/fileUpload.html
@@ -1,10 +1,17 @@
 <template name="afFileUploadImage">
-  {{#each files}}
-  {{this.url}}
-  <div>
-    <img src="{{this.url store='thumbs'}}"/>
-  </div>
-  {{/each}}
+    {{#if destroyForm}}
+    {{else}}
+          <div class="carousel">
+      {{#each files}}
+          {{> carouselItem}}
+      {{/each}}
+      </div>
+
+    {{/if}}
+</template>
+
+<template name="carouselItem">
+    <div><img src="{{this.url store='thumbs'}}"/></div>
 </template>
 
 <template name="afFileUploadAudio">
