--- a/app/packages/browser-push-notifications-master/lib/client/views.html
+++ b/app/packages/browser-push-notifications-master/lib/client/views.html
@@ -1,6 +1,8 @@
 <template name="bpNotificationsCheckbox">
-  <div class="push-notifications-checkbox {{classes}}">
-    <input disabled type="checkbox" id='push-button'>
-    <label for="push-button">{{label}}</label>
-  </div>
+  {{#unless isCordova}}
+	  <div class="push-notifications-checkbox {{classes}}">
+	    <input disabled type="checkbox" id='push-button'>
+	    <label for="push-button">{{label}}</label>
+	  </div>
+  {{/unless}}
 </template>
