--- a/app/packages/messaging/client/chat/chat.html
+++ b/app/packages/messaging/client/chat/chat.html
@@ -71,18 +71,22 @@
 
       <div class="direct-chat-contacts">
         <ul class="contacts-list">
-          <li>
-            <a href="#">
-              <img class="contacts-list-img" src="../dist/img/user1-128x128.jpg" alt="Contact Avatar">
-              <div class="contacts-list-info">
-                <span class="contacts-list-name">
-                  Count Dracula
-                  <small class="contacts-list-date pull-right">2/28/2015</small>
-                </span>
-                <span class="contacts-list-msg">How have you been? I was...</span>
-              </div><!-- /.contacts-list-info -->
-            </a>
-          </li><!-- End Contact Item -->
+          {{#each users}}
+            <li>
+              <a class="contactButton" data-user="{{_id}}" href="#">
+                {{#with FS.GetFile "files" (userImage _id)}}<img class="contacts-list-img" src="{{url}}" alt="Contact Avatar">{{/with}}
+                <div class="contacts-list-info">
+                  <span class="contacts-list-name">
+                    {{profile.name}}
+                    <small class="contacts-list-date pull-right">2/28/2015</small>
+                  </span>
+                  {{#with lastmessage _id}}
+                  <span class="contacts-list-msg">{{body}}</span>
+                  {{/with}}
+                </div><!-- /.contacts-list-info -->
+              </a>
+            </li>
+          {{/each}}
         </ul><!-- /.contatcts-list -->
       </div><!-- /.direct-chat-pane -->
     </div><!-- /.box-body -->
@@ -96,6 +100,7 @@
     </div><!-- /.box-footer-->
   </div>
 </template>
+
 
 <template name="chats">
   <div class="chats">
