signature code total redo/first beta

--- a/app/packages/diary/client/widgets/diary/diary.html
+++ b/app/packages/diary/client/widgets/diary/diary.html
@@ -1,6 +1,6 @@
 <template name="diary">
   
-  <div class="box">
+  <div class="box box-info">
     <table class="table">
       <tbody>
         <tr>
