--- a/app/packages/calendar/submissionsAdminCalendar.html
+++ b/app/packages/calendar/submissionsAdminCalendar.html
@@ -1,5 +1,5 @@
 <template name="submissionsAdminCalendar">
-  <div class="box">
+  <div class="box box-info">
     <div class="box-header with-border">
       <h3 class="box-title">Admin Calendar - {{title}}</h3>
 
@@ -33,7 +33,7 @@
     </li>
   </ul>
     </div>
-    <div class="box-body table-responsivesubmissionsAdminCalendar">
+    <div class="box-body submissionsAdminCalendar">
       {{> fullcalendar
         events=events
       }}
