--- a/app/packages/calendar/submissionsCalendar.html
+++ b/app/packages/calendar/submissionsCalendar.html
@@ -1,5 +1,5 @@
 <template name="submissionsCalendar">
-  <div class="box">
+  <div class="box box-info">
     <div class="box-header with-border">
       <h3 class="box-title">Calendar - {{title}}</h3>
 
@@ -25,7 +25,7 @@
         </div>
       </form>
     </div>
-    <div class="box-body table-responsivesubmissionsAdminCalendar">
+    <div class="box-body">
       {{> fullcalendar
         events=events
       }}
