--- a/app/packages/messaging/client/chat/messageList.html
+++ b/app/packages/messaging/client/chat/messageList.html
@@ -1,9 +1,9 @@
 <template name="messageList">
-  <div class="box">
+  <div class="box box-info">
     <div class="box-header with-border">
       <h3 class="box-title">Messages</h3>
     </div>
-    <div class="box-body table-responsivesubmissionsAdminCalendar">
+    <div class="box-body">
     <ul class="contacts-list">
       {{#each users}}
         <li>
