--- a/app/packages/pages/client/widgets/announcement/announcement.html
+++ b/app/packages/pages/client/widgets/announcement/announcement.html
@@ -1,5 +1,5 @@
 <template name="announcement">
-	<div class="box box-solid box-info">
+	<div class="box box-info">
 		<div class="box-header with-border">
 			<h3 class="box-title">{{header}}</h3>
 			<!--div class="box-tools pull-right">
