--- a/app/packages/currency/calculator.html
+++ b/app/packages/currency/calculator.html
@@ -1,7 +1,9 @@
 <template name="calculator">
   <form action="#" method="get" class="form form-inline" style="width:200px">
-      <div>ZAR: <input type="number" name="from" class="form-control form-search" placeholder="0.00" size="5"></div>
-			<div>ELCOIN: <span>{{to}}</span></div>
-      <div>MARKET PRICE: <span>{{market}}</span></div>
+    <div>ZAR:
+      <input type="number" name="from" class="form-control form-search" placeholder="0.00" size="5">
+    </div>
+    <div>ELCOIN: <span>{{to}}</span></div>
+    <div>MARKET PRICE: <span>{{market}}</span></div>
   </form>
 </template>
