--- a/app/packages/currency/currencyInput/currencyInput.html
+++ b/app/packages/currency/currencyInput/currencyInput.html
@@ -1,5 +1,7 @@
 <template name="afInputCurrency">
-      <div>ZAR:   <input type="number" value="{{this.value}}" {{this.atts}}/></div>
-			<div>ELCOIN: <span>{{to}}</span></div>
-      <div>MARKET PRICE: <span>{{market}}</span></div>
+    <div>ZAR:
+        <input type="number" value="{{this.value}}" {{this.atts}}/>
+    </div>
+    <div>ELCOIN: <span>{{to}}</span></div>
+    <div>MARKET PRICE: <span>{{market}}</span></div>
 </template>
