--- a/app/packages/forms/shared/fields/approveInput/approveForm.html
+++ b/app/packages/forms/shared/fields/approveInput/approveForm.html
@@ -1,9 +1,4 @@
 <template name="approveForm">
-  {{#if currentUser}}
-    {{#if Template.subscriptionsReady}}
-      <span class="approval">Attempting to approve...</span>
-    {{/if}}
-  {{else}}
-    Please log in.
-  {{/if}}
+  {{#if currentUser}} {{#if Template.subscriptionsReady}}
+  <span class="approval">Attempting to approve...</span> {{/if}} {{else}} Please log in. {{/if}}
 </template>
