--- a/app/packages/forms/shared/fields/formSelectInput/formList.html
+++ b/app/packages/forms/shared/fields/formSelectInput/formList.html
@@ -1,15 +1,13 @@
 <template name="afFormList">
   <select {{this.atts}}>
-    {{#each this.items}}
-      {{#if this.optgroup}}
-        <optgroup label="{{this.optgroup}}">
-        {{#each this.items}}
-        <option {{afSelectOptionAtts}}>{{this.label}}</option>
-        {{/each}}
-        </optgroup>
-      {{else}}
-        <option {{afSelectOptionAtts}}>{{this.label}}</option>
-      {{/if}}
-    {{/each}}
+    {{#each this.items}} {{#if this.optgroup}}
+    <optgroup label="{{this.optgroup}}">
+      {{#each this.items}}
+      <option {{afSelectOptionAtts}}>{{this.label}}</option>
+      {{/each}}
+    </optgroup>
+    {{else}}
+    <option {{afSelectOptionAtts}}>{{this.label}}</option>
+    {{/if}} {{/each}}
   </select>
 </template>
