fix for form edit

--- a/app/packages/forms/shared/fields/approveInput/approveInput.html
+++ b/app/packages/forms/shared/fields/approveInput/approveInput.html
@@ -1,30 +1,25 @@
 <template name="afApproveInput">
-  {{#if canAdmin}}
-  {{#linkTo route="approveForm" doc=getId field=getField setting=true}}Approve{{/linkTo}}
-  {{#linkTo route="approveForm" doc=getId field=getField setting=false}}Reject{{/linkTo}}
-  {{/if}}
+  {{#if canAdmin}} {{#linkTo route="approveForm" doc=getId field=getField setting=true}}Approve{{/linkTo}} {{#linkTo route="approveForm" doc=getId field=getField setting=false}}Reject{{/linkTo}} {{/if}}
   <div>
-  {{#if approvalsCount}}
-  Approved by:
-  <ul>
-  {{#each approvals}}
-    <li>
-      {{name}}
-    </li>
-  {{/each}}
-  </ul>
-  {{/if}}
+    {{#if approvalsCount}} Approved by:
+    <ul>
+      {{#each approvals}}
+      <li>
+        {{name}}
+      </li>
+      {{/each}}
+    </ul>
+    {{/if}}
   </div>
   <div>
-  {{#if rejections}}
-  Rejected by:
-  <ul>
-  {{#each rejections}}
-    <li>
-      {{name}}
-    </li>
-  {{/each}}
-  </ul>
-  {{/if}}
+    {{#if rejections}} Rejected by:
+    <ul>
+      {{#each rejections}}
+      <li>
+        {{name}}
+      </li>
+      {{/each}}
+    </ul>
+    {{/if}}
   </div>
 </template>
